# hftbacktest_xtp

./: README_DEV.md  SYNC_WORKFLOW.md
connector/examples/: ctp_config.toml
connector/src/: main.rs
connector/src/ctp/: market_data_stream.rs  mod.rs  msg.rs  order_manager.rs  rest.rs  user_data_stream.rs
cpp_hft_backtest/: CMakeLists.txt  README.md  build.sh
cpp_hft_backtest/examples/simple_mm/: main.cpp  simple_mm_strategy.h
cpp_hft_backtest/include/core/: backtest_engine.h  market_data.h  order_book.h  position_manager.h
cpp_hft_backtest/include/strategy/: strategy.h
cpp_hft_backtest/src/core/: backtest_engine.cpp  order_book.cpp  position_manager.cpp
cpp_hft_backtest/src/strategy/: strategy.cpp
docs/ctp/v3.7.5_CP_20251125_api_traderapi_linux64_se/: ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h  error.xml
my_docs/: CPP_ARCHITECTURE.md  CTP_INTEGRATION_GUIDE.md  CTP_QUICKSTART.md  CTP_TEST_REPORT.md
my_extensions/: build_ctp_test.sh  ctp_data_converter.py  example_ctp.py  test_ctp_login.cpp  test_ctp_login.py
